--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -29,7 +29,7 @@
  
         </div>
         <div class="btn-container">
-            <form action="/indexView/" method="post">{% csrf_token %}
+            <form action="/" method="post">{% csrf_token %}
                 <button type="submit" class="btn">Roll</button>
             </form>
 
